--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
     position: relative;
     background-color: pink;
     width: 150px;
-    margin: 20px;
+    margin: 5px;
     background-color: pink;
 } .logo img {
     width: 100%;
@@ -32,18 +32,29 @@ nav {
     position: absolute;
     right: 0px;
 } nav ul {
-    width: 700px;
-    margin-right: 40px;
+    width: 980px;
 } nav ul li {
     display: inline-block;
-    height: 50px;
-    line-height: 50px;
-    margin-top: 70px;
+    height: 150px;
+    line-height: 150px;
+    margin-top: 5px;
     vertical-align: middle;
     list-style: none;
-    background-color: rgba(170, 170, 170, 0.7);
-    color: black;
+    color: white;
     margin-right: 30px;
     text-align: center;
     border-radius: 5px;
+    overflow: hidden;
+} nav ul li:hover {
+    color: black;
+    background-color: rgba(150, 150, 150, 0.7);
+} nav ul li a {
+    color: inherit;
+    width: inherit; 
+    line-height: 150px;
+    margin: 0px;
+    display: inline-block;
+} nav ul li a:hover {
+    color: black;
+    text-decoration: none;
 }
