--- a/css/style.css
+++ b/css/style.css
@@ -9,52 +9,8 @@ body {
     background-position-y: center;
 }
 
-.banner {
+section {
+    margin: 30px 0px;
     background-color: rgba(0, 0, 0, 0.8);
-    margin-top: 50px;
-    overflow: hidden;
-}
-
-.logo {
-    display: inline-block;
-    overflow: hidden;
-    margin: auto 0px;
-    position: relative;
-    background-color: pink;
-    width: 150px;
-    margin: 5px;
-    background-color: pink;
-} .logo img {
-    width: 100%;
-}
-
-nav {
-    position: absolute;
-    right: 0px;
-} nav ul {
-    width: 980px;
-} nav ul li {
-    display: inline-block;
-    height: 150px;
-    line-height: 150px;
-    margin-top: 5px;
-    vertical-align: middle;
-    list-style: none;
-    color: white;
-    margin-right: 30px;
-    text-align: center;
-    border-radius: 5px;
-    overflow: hidden;
-} nav ul li:hover {
-    color: black;
-    background-color: rgba(150, 150, 150, 0.7);
-} nav ul li a {
-    color: inherit;
-    width: inherit; 
-    line-height: 150px;
-    margin: 0px;
-    display: inline-block;
-} nav ul li a:hover {
-    color: black;
-    text-decoration: none;
+    height: 500px;
 }
