--- a/css/style.css
+++ b/css/style.css
@@ -12,5 +12,7 @@ body {
 section {
     margin: 30px 0px;
     background-color: rgba(0, 0, 0, 0.8);
-    height: 500px;
+} section .entry {
+    background-color: rgba(255, 255, 255, 0.8);
+    margin: 30px 0px;
 }
