--- a/css/nav.style.css
+++ b/css/nav.style.css
@@ -9,28 +9,18 @@
     overflow: hidden;
     margin: auto 0px;
     position: relative;
-    background-color: pink;
-    width: 150px;
-    margin: 5px;
-    background-color: pink;
 } .logo img {
-    width: 100%;
+    height: 150px;
 }
 
-nav {
-    position: absolute;
-    right: 0px;
-} nav ul {
-    width: 980px;
-} nav ul li {
+nav ul li {
     display: inline-block;
     height: 150px;
     line-height: 150px;
-    margin-top: 5px;
+    margin-top: 10px;
     vertical-align: middle;
     list-style: none;
     color: white;
-    margin-right: 30px;
     text-align: center;
     border-radius: 5px;
     overflow: hidden;
