--- a/css/ext.style.css
+++ b/css/ext.style.css
@@ -12,11 +12,12 @@ body {
 section {
     margin: 30px 0px;
     background-color: rgba(0, 0, 0, 0.8);
-} section .entry {
+} section .row div > .entry {
     background-color: rgba(255, 255, 255, 0.8);
     margin: 30px 0px;
     padding-top: 10px;
     padding-bottom: 10px;
-} .entry h3 {
+} .entry img {
     margin-bottom: 20px;
+    width: 100%;
 }
