--- a/css/nav.style.css
+++ b/css/nav.style.css
@@ -39,8 +39,10 @@ nav ul li {
 } nav ul li a:visited {
     color: inherit;
     text-decoration: none;
+} nav ul li a:active {
+    color: inherit;
+    text-decoration: none;
 } nav ul li a:focus {
-    color: black;
-    background-color: rgba(150, 150, 150, 0.7);
+    color: inherit;
     text-decoration: none;
 }
