--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,10 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
 }
 
 body {
     background-image: url(../images/city.jpg);
-    background-size: cover;
-    background-position: top;
-}
-
-section {
-    margin: 30px 0px;
-    background-color: rgba(0, 0, 0, 0.8);
-} section .entry {
-    background-color: rgba(255, 255, 255, 0.8);
-    margin: 30px 0px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-} .entry h3 {
-    margin-bottom: 20px;
+    background-size: contain;
+    background-position: fixed;
 }
