--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,9 @@ body {
     background-size: contain;
     background-position: fixed;
 }
+
+.carousel {
+    margin-top: 30px;
+    margin-left: 25px;
+    margin-right: 25px;
+}
