--- a/css/article.style.css
+++ b/css/article.style.css
@@ -7,8 +7,8 @@ section {
     padding-top: 10px;
     padding-bottom: 10px;
     color: white;
-} .entry h3 {
-    margin-bottom: 20px;
+} .entry h1 {
+    margin-top: 10px;
 }
 
 section .entry img{
@@ -19,4 +19,14 @@ section .entry iframe {
     position: relative;
     margin-left: 50%;
     left: -360px;
+}
+
+p {
+    font-size: 1.1rem;
+}
+
+hr {
+    background-color: white;
+    margin-left: 120px;
+    margin-right: 120px;
 }
