--- a/css/nav.style.css
+++ b/css/nav.style.css
@@ -1,3 +1,30 @@
+.notice {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 1;
+    text-align: center;
+    color: #fff;
+    font-size: 1.5rem;
+    background-color: black;
+}
+.notice img {
+    width: 100px;
+    height: 100px;
+    margin-bottom: 20px;
+}
+.notice div.wrapper {
+    margin-top: 200px;
+}
+.notice div.banner-footer {
+    font-size: 0.8rem;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
 .banner {
     margin-top: 50px;
     overflow: hidden;
